--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "static-site",
+  "name": "Professional-README",
   "version": "1.0.0",
-  "description": "",
+  "description": "an app to create a porfessional README",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZaymonDgon/Professional-README.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ZaymonDgon/Professional-README/issues"
+  },
+  "homepage": "https://github.com/ZaymonDgon/Professional-README#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "inquirer": "^8.2.0"
   }
 }
